Add trip to RealtimeVehiclePosition, use Java 17 features